# spilit-expense

./: LICENSE  pyproject.toml  render.yaml
1.Backend/: .env  FINAL_STATUS.md  IMPLEMENTATION_VERIFICATION.md  MERGE_PHASE3.md  PHASE2_COMPLETE.md  PHASE2_QUICKREF.md  PHASE2_README.md  PHASE3_COMPLETE.md  PHASE3_README.md  QUICK_CHECKLIST.md  check_phase3.py  main.py  requirements.txt  setup_phase1.py  test_phase1.py
1.Backend/client/: langgraph_service.py
1.Backend/db/: client.py  init.py  schema.py
1.Backend/db/migrations/: phase1_migration.py
1.Backend/phase1_docs/: PHASE1_ARCHITECTURE.md  PHASE1_CHECKLIST.md  PHASE1_COMPLETE.md  PHASE1_INDEX.md  PHASE1_QUICKREF.md  PHASE1_README.md  PHASE1_SUMMARY.md
1.Backend/server/: PHASE3_TOOLS.py  server.py  server.py.py
1.Backend/server/utils/: __init__.py  authorization.py
1.Backend/server/utils/splits/: __init__.py  calculator.py
1.Backend/tests/: test_phase1_migration.py  test_phase1_schema.py  test_phase2_groups.py  test_phase3_splits.py
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  ExpenseList.jsx  Login.jsx  Signup.jsx  Summary.jsx
frontend/src/services/: api.js  gemini.js
